translation-tool/inputs/source_meta/objects/hsvc_Case_Assets__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Assets</relationshipLabel>
        <relationshipName>Case_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Assets</relationshipLabel>
        <relationshipName>Case_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_SAN__c</fullName>
        <formula>Asset__r.Old_CRM_PS_SAN__c</formula>
        <label>SAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Fob</fullName>
                    <default>true</default>
                    <label>Key Fob</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Assets</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Case Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>